adjust contact for height

--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -48,3 +48,9 @@
         position: relative;
     }
 }
+
+@media screen and (max-height: 640px) {
+    .sticky-info {
+        margin-top: 0em;
+    }
+}
